--- a/topology.yml
+++ b/topology.yml
@@ -23,6 +23,7 @@ routers:
 networks:
   - name: server-switch
     cidr: 192.168.20.0/24
+    accessible_by_user: False
 
   - name: client-switch
     cidr: 192.168.30.0/24
@@ -43,7 +44,4 @@ router_mappings:
       network: client-switch
       ip: 192.168.30.1
 
-groups:
-  - name: user-accessible
-    nodes:
-      - client
+groups: []
