Update usage of logging roles to contain sandbox uuid

--- a/provisioning/playbook.yml
+++ b/provisioning/playbook.yml
@@ -64,7 +64,7 @@
   roles:
     - role: sandbox-logging-forward
       slf_destination: '{{ hostvars["man"].ansible_host }}'
-      slf_sandbox_id: "{{ kypo_global_sandbox_allocation_unit_id }}"
+      slf_sandbox_id: "{{ kypo_global_sandbox_id }}"
       slf_sandbox_name: '{{ kypo_global_sandbox_name }}'
       slf_pool_id: '{{ kypo_global_pool_id }}'
     - role: sandbox-logging-bash
