--- a/provisioning/roles/client/tasks/main.yml
+++ b/provisioning/roles/client/tasks/main.yml
@@ -5,7 +5,8 @@
   user:
     name: 'kypo'
     shell: '/bin/bash'
-    group: 'sudo'
+    groups: 
+      - 'sudo'
     append: yes
 
 - name: Create alias for server
