--- a/provisioning/roles/client/tasks/main.yml
+++ b/provisioning/roles/client/tasks/main.yml
@@ -1,13 +1,6 @@
 ---
 # This is a role for setting up the client.
 
-- name: Set sudo for user kypo
-  user:
-    name: 'kypo'
-    groups: 
-      - 'sudo'
-    append: yes
-
 - name: Create alias for server
   lineinfile:
     path: '/etc/hosts'
@@ -24,8 +17,8 @@
 - name: Add passwords file to the home directory
   copy:
     src: passlist.txt
-    dest: /home/kypo/passlist.txt
-    owner: kypo
+    dest: /home/user/passlist.txt
+    owner: user
     mode: 0644
 
 ...
