--- a/provisioning/playbook.yml
+++ b/provisioning/playbook.yml
@@ -27,18 +27,12 @@
       kypo_user_access_sudo: True
     - name: client
 
-- name: setup logging bash
-  hosts:
-    - hosts
-    - routers
-  gather_facts: yes
+
+- name: set up command logging
+  hosts: hosts
   become: yes
   roles:
-    - role: sandbox-logging-forward
-      slf_destination: '{{ hostvars["man"].ansible_host }}'
-      slf_sandbox_id: "{{ kypo_global_sandbox_id }}"
-      slf_sandbox_name: '{{ kypo_global_sandbox_name }}'
-      slf_pool_id: '{{ kypo_global_pool_id }}'
-    - role: sandbox-logging-bash
+    - role: sandbox-logging
+      slf_destination_port: '{% if hostvars["man"] is defined -%} 514 {%- else -%} 515 {%- endif %}'
 
 ...
