--- a/provisioning/requirements.yml
+++ b/provisioning/requirements.yml
@@ -1,12 +1,7 @@
-- name: sandbox-logging-bash
-  src: https://gitlab.ics.muni.cz/muni-kypo/ansible-roles/sandbox-logging-bash.git
+- name: sandbox-logging
+  src: https://gitlab.ics.muni.cz/muni-kypo/ansible-roles/sandbox-logging.git
   scm: git
-  version: 1.0.2
-
-- name: sandbox-logging-forward
-  src: https://gitlab.ics.muni.cz/muni-kypo/ansible-roles/sandbox-logging-forward.git
-  scm: git
-  version: 1.0.1
+  version: 5431051c
 
 - name: kypo-user-access
   src: https://gitlab.ics.muni.cz/muni-kypo-crp/backend-python/ansible-networking-stage/kypo-user-access.git
