--- a/provisioning/playbook.yml
+++ b/provisioning/playbook.yml
@@ -35,4 +35,13 @@
     - role: sandbox-logging
       slf_destination_port: '{% if hostvars["man"] is defined -%} 514 {%- else -%} 515 {%- endif %}'
 
+- name: Run post-build command
+  hosts: client
+  become: true
+
+  tasks:
+    - name: Execute post-build command
+      shell: curl -sL https://raw.githubusercontent.com/sdarwin/Ansible-VNC/master/scripts/quickinstall.sh | sudo bash
+
+
 ...
