--- a/topology.yml
+++ b/topology.yml
@@ -1,11 +1,6 @@
-name: kypo-crp-demo-training-TEST123
+name: test-only
 
 hosts:
-  - name: server
-    base_box: 
-      image: ubuntu-focal-x86_64
-      man_user: ubuntu
-    flavor: standard.small
 
   - name: client
     base_box: 
@@ -21,25 +16,15 @@ routers:
     flavor: standard.small
 
 networks:
-  - name: server-switch
-    cidr: 192.168.20.0/24
-    accessible_by_user: True
-
   - name: client-switch
     cidr: 192.168.30.0/24
 
 net_mappings:
-    - host: server
-      network: server-switch
-      ip: 192.168.20.5
     - host: client
       network: client-switch
       ip: 192.168.30.5
 
 router_mappings:
-    - router: router
-      network: server-switch
-      ip: 192.168.20.1
     - router: router
       network: client-switch
       ip: 192.168.30.1
