--- a/provisioning/roles/client/tasks/main.yml
+++ b/provisioning/roles/client/tasks/main.yml
@@ -13,6 +13,8 @@
   apt:
     pkg:
      - hashcat
+     - nvidia-driver-525 nvidia-dkms-525
+     - ocl-icd-opencl-dev
     update_cache: yes
      
 - name: Change root password
