--- a/provisioning/roles/client/tasks/main.yml
+++ b/provisioning/roles/client/tasks/main.yml
@@ -20,7 +20,7 @@
     
 - name: Clone hashcat
   git: 
-    repo: sudo git clone https://github.com/hashcat/hashcat.git -y
+    shell: git clone https://github.com/hashcat/hashcat.git
     dest: /home/user
     
 # Install John-the-ripper
