--- a/provisioning/roles/client/tasks/main.yml
+++ b/provisioning/roles/client/tasks/main.yml
@@ -39,10 +39,10 @@
     path: /etc/shadow
     mode: "0640"
     
-- name: Create file flag.zip
+- name: Create file protected.zip
   copy:
-    src: flag.zip
-    dest: /home/user/flag.zip
+    src: protected.zip
+    dest: /home/user/protected.zip
     owner: user
     group: user
     mode: "0644"
