--- a/provisioning/playbook.yml
+++ b/provisioning/playbook.yml
@@ -15,6 +15,9 @@
 - name: set up client
   hosts: client
   become: yes
+  become_method: su
+  become_ask_pass: true
+  
   vars:
     root_password: "strongpass"
   roles:
