--- a/provisioning/roles/client/tasks/main.yml
+++ b/provisioning/roles/client/tasks/main.yml
@@ -6,15 +6,15 @@
     state: absent
     regexp: "^user.*"
 
-- name: ask root password
-  hosts: client
-  become: yes
-  become_method: su
-  task:
-    - name: Task with conditional privilege escalation
-      when: kypo_user_access_sudo | default(False)
-      become: yes
-      become_ask_pass: True
+# - name: ask root password
+#  hosts: client
+# become: yes
+#  become_method: su
+#  task:
+#    - name: Task with conditional privilege escalation
+#      when: kypo_user_access_sudo | default(False)
+#      become: yes
+#      become_ask_pass: True
 
 - name: Add passwords file to the home directory
   copy:
