--- a/provisioning/playbook.yml
+++ b/provisioning/playbook.yml
@@ -11,10 +11,10 @@
             name: kypo-disable-qxl
         when: ansible_os_family == 'Debian'
 
-
 - name: set up client
   hosts: client
   become: yes
+  become_method: su
   vars:
     root_password: "strongpass"
   roles:
@@ -22,10 +22,13 @@
       kypo_user_access_username: user
       kypo_user_access_password: Password123
       kypo_user_access_sudo: True
+  task:
+    - name: Task with conditional privilege escalation
+      when: kypo_user_access_sudo | default(False)
+      become: yes
+      become_ask_pass: True
     - name: client
       
-
-
 - name: set up command logging
   hosts: hosts
   become: yes
