--- a/provisioning/playbook.yml
+++ b/provisioning/playbook.yml
@@ -22,7 +22,8 @@
       kypo_user_access_username: user
       kypo_user_access_password: Password123
       kypo_user_access_sudo: True
-  task:
+  
+  tasks:
     - name: Task with conditional privilege escalation
       when: kypo_user_access_sudo | default(False)
       become: yes
