--- a/provisioning/playbook.yml
+++ b/provisioning/playbook.yml
@@ -21,8 +21,9 @@
     - name: kypo-user-access
       kypo_user_access_username: user
       kypo_user_access_password: Password123
-      kypo_user_access_sudo: True
+#      kypo_user_access_sudo: True
     - name: client
+    
   tasks:
     - name: Task with conditional privilege escalation
       when: kypo_user_access_sudo | default(False)
