--- a/provisioning/playbook.yml
+++ b/provisioning/playbook.yml
@@ -22,7 +22,7 @@
       kypo_user_access_username: user
       kypo_user_access_password: Password123
       kypo_user_access_sudo: False
-    - name: client
+#    - name: client
     
   tasks:
     - name: Task with conditional privilege escalation
