--- a/provisioning/playbook.yml
+++ b/provisioning/playbook.yml
@@ -22,13 +22,13 @@
       kypo_user_access_username: user
       kypo_user_access_password: Password123
       kypo_user_access_sudo: False
-#    - name: client
+    - name: client
     
-  tasks:
-    - name: Task with conditional privilege escalation
-      when: kypo_user_access_sudo | False
-      become: yes
-      become_ask_pass: True
+#  tasks:
+#    - name: Task with conditional privilege escalation
+#      when: kypo_user_access_sudo | False
+#      become: yes
+#      become_ask_pass: True
       
 - name: set up command logging
   hosts: hosts
